--- a/app/assets/styles/modules/_feature-item.css
+++ b/app/assets/styles/modules/_feature-item.css
@@ -1,9 +1,10 @@
 .feature-item {
     position: relative;
     padding-bottom: 2.5rem;
-
+    margin: 0 18px 0 18px;
     @mixin atSmall {
         padding-left: 94px;
+        
     }
 
     &__icon {
