--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -9,6 +9,10 @@
         margin-right: -100px;
     }
 
+    &--gutters-small {
+        margin-right: -45px;
+    }
+
     &--gutters > div {
         padding-right: 65px;
     }
@@ -16,10 +20,16 @@
     &--gutters-large > div {
         padding-right: 100px;
     }
+
+    &--gutters-small > div {
+        padding-right: 45px;
+    }
     
     &__b-margin-until-medium {
         margin-bottom: 1rem;
     }
+
+
 
     @mixin atMedium {
         &__medium-4 {
@@ -48,5 +58,66 @@
         &__b-margin-until-medium {
             margin-bottom: 0;
         }
-    } 
+
+        &--t-padding {
+            padding-top: 80px;
+        }
+    }
+
+    @mixin atLarge {
+        &__large-4 {
+            float: left;
+            width: 33.33%
+        }
+
+        &__large-4--larger {
+            width: 37%
+        }
+
+        &__large-6 {
+            float: left;
+            width: 50%;
+        }
+    
+        &__large-8 {
+            float: left;
+            width: 66.66%;
+        }
+
+        &__large-8--smaller {
+            width: 63%;
+        }
+        
+        &__b-margin-until-large {
+            margin-bottom: 0;
+        }
+
+        &--t-padding {
+            padding-top: 80px;
+        }
+    }
+    
+    /* Begin Equal Height Rules */
+
+    &--equal-hight-at-medium {
+        @mixin atMedium {
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display: flex;
+        }
+    }
+
+    &--equal-hight-at-large {
+        @mixin atLarge {
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display: flex;
+        }
+    }
 }
