--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -51,7 +51,7 @@
         @mixin atMedium {
             padding: 12px 0;
             font-size: 1rem;
-            background-color: transparet;
+            background-color: transparent;
         }
     }
 }
