--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -10,7 +10,12 @@
     }
     
     @mixin atMedium {
+        position: fixed;
         background-color: rgba($mainBlue, .3);
+
+        &--dark {
+            background-color: rgba(23, 51, 72, .85);
+        }
     }
 
     &__btn-container {
@@ -27,6 +32,7 @@
         transform: translateX(-50%) scale(.8);
         background-color: $mainBlue;
         padding: 25px 36px;
+        transition: transform .2s ease-out;
 
         &__graphic {
             text-indent: -9999px;
@@ -34,7 +40,11 @@
 
         @mixin atMedium {
             left: auto;
-            transform: translateX(0); 
+            transform: translateX(0);
+            
+            .site-header--dark & {
+                transform: scale(.57);
+            }
         }
     }
 
